--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "react-native-signature-canvas": "^4.7.1",
     "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.6.3",
-    "rn-fetch-blob": "^0.12.0",
-    "expo-font": "~11.4.0"
+    "react-native-webview": "^13.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
